Add home screen UI with card management
  - Implement HomePage with card list and empty state
  - Add CardProvider for state management
  - Create CardItem, CardListView, EmptyState widgets
  - Add swipe-to-delete with confirmation dialog
  - Update all 12 language translations

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,4 +1,22 @@
 {
   "@@locale": "ar",
-  "appTitle": "احفظ - تذكر"
+  "appTitle": "احفظ - تذكر",
+  "homeTitle": "بطاقاتي",
+  "emptyStateTitle": "لا توجد بطاقات بعد",
+  "emptyStateSubtitle": "أضف بطاقتك الأولى للبدء",
+  "addCardButton": "إضافة بطاقة",
+  "cardStudyCount": "تمت الدراسة {count} مرات",
+  "@cardStudyCount": {
+    "placeholders": {
+      "count": {
+        "type": "int"
+      }
+    }
+  },
+  "cardContentHint": "أدخل النص للحفظ",
+  "deleteCard": "حذف البطاقة",
+  "deleteCardConfirm": "هل أنت متأكد من حذف هذه البطاقة؟",
+  "cancel": "إلغاء",
+  "delete": "حذف",
+  "save": "حفظ"
 }
