Add card editor with create/edit/delete functionality
  - Implement CardEditorPage with add and edit modes
  - Add form validation and unsaved changes detection
  - Connect navigation from HomePage
  - Update all 12 language translations

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -18,5 +18,15 @@
   "deleteCardConfirm": "هل أنت متأكد من حذف هذه البطاقة؟",
   "cancel": "إلغاء",
   "delete": "حذف",
-  "save": "حفظ"
+  "save": "حفظ",
+  "addCard": "إضافة بطاقة",
+  "editCard": "تعديل البطاقة",
+  "cardContent": "المحتوى",
+  "cardContentRequired": "المحتوى مطلوب",
+  "cardHint": "تلميح (اختياري)",
+  "cardHintPlaceholder": "أدخل تلميحاً للمساعدة في التذكر",
+  "discardChanges": "تجاهل التغييرات",
+  "discardChangesMessage": "لديك تغييرات غير محفوظة. هل تريد تجاهلها؟",
+  "keepEditing": "متابعة التعديل",
+  "discard": "تجاهل"
 }
