--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -18,5 +18,15 @@
   "deleteCardConfirm": "Вы уверены, что хотите удалить эту карточку?",
   "cancel": "Отмена",
   "delete": "Удалить",
-  "save": "Сохранить"
+  "save": "Сохранить",
+  "addCard": "Добавить карточку",
+  "editCard": "Редактировать карточку",
+  "cardContent": "Содержание",
+  "cardContentRequired": "Содержание обязательно",
+  "cardHint": "Подсказка (необязательно)",
+  "cardHintPlaceholder": "Введите подсказку для запоминания",
+  "discardChanges": "Отменить изменения",
+  "discardChangesMessage": "У вас есть несохранённые изменения. Отменить?",
+  "keepEditing": "Продолжить",
+  "discard": "Отменить"
 }
