--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -21,5 +21,15 @@
   "deleteCardConfirm": "Are you sure you want to delete this card?",
   "cancel": "Cancel",
   "delete": "Delete",
-  "save": "Save"
+  "save": "Save",
+  "addCard": "Add Card",
+  "editCard": "Edit Card",
+  "cardContent": "Content",
+  "cardContentRequired": "Content is required",
+  "cardHint": "Hint (optional)",
+  "cardHintPlaceholder": "Enter a hint to help remember",
+  "discardChanges": "Discard Changes",
+  "discardChangesMessage": "You have unsaved changes. Discard them?",
+  "keepEditing": "Keep Editing",
+  "discard": "Discard"
 }
