--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -18,5 +18,15 @@
   "deleteCardConfirm": "이 카드를 삭제할까요?",
   "cancel": "취소",
   "delete": "삭제",
-  "save": "저장"
+  "save": "저장",
+  "addCard": "카드 추가",
+  "editCard": "카드 편집",
+  "cardContent": "내용",
+  "cardContentRequired": "내용을 입력해주세요",
+  "cardHint": "힌트 (선택)",
+  "cardHintPlaceholder": "기억에 도움이 될 힌트를 입력하세요",
+  "discardChanges": "변경 취소",
+  "discardChangesMessage": "저장하지 않은 변경 사항이 있습니다. 취소할까요?",
+  "keepEditing": "계속 편집",
+  "discard": "취소"
 }
