--- a/lib/l10n/app_zh_Hant.arb
+++ b/lib/l10n/app_zh_Hant.arb
@@ -18,5 +18,15 @@
   "deleteCardConfirm": "確定要刪除這張卡片嗎？",
   "cancel": "取消",
   "delete": "刪除",
-  "save": "儲存"
+  "save": "儲存",
+  "addCard": "新增卡片",
+  "editCard": "編輯卡片",
+  "cardContent": "內容",
+  "cardContentRequired": "請輸入內容",
+  "cardHint": "提示（可選）",
+  "cardHintPlaceholder": "輸入有助於記憶的提示",
+  "discardChanges": "放棄更改",
+  "discardChangesMessage": "有未儲存的更改，是否放棄？",
+  "keepEditing": "繼續編輯",
+  "discard": "放棄"
 }
