Add study mode with typing-based memorization
  - Add StudyPage with card shuffling and answer checking
  - Add StudyResultPage with accuracy display and wrong answers list
  - Add study widgets: StudyProgressBar, StudyCard, AnswerFeedback
  - Add StudyResult domain model for tracking answers
  - Add study start button to HomePage AppBar
  - Add study mode localization for all 12 languages

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -28,5 +28,22 @@
   "discardChanges": "تجاهل التغييرات",
   "discardChangesMessage": "لديك تغييرات غير محفوظة. هل تريد تجاهلها؟",
   "keepEditing": "متابعة التعديل",
-  "discard": "تجاهل"
+  "discard": "تجاهل",
+  "startStudy": "بدء الدراسة",
+  "studying": "جاري الدراسة",
+  "enterAnswer": "أدخل إجابتك",
+  "submit": "إرسال",
+  "correct": "صحيح!",
+  "incorrect": "خطأ",
+  "yourAnswer": "إجابتك",
+  "correctAnswerLabel": "الإجابة الصحيحة",
+  "next": "التالي",
+  "studyComplete": "اكتملت الدراسة",
+  "accuracy": "الدقة",
+  "wrongAnswers": "الإجابات الخاطئة",
+  "studyAgain": "دراسة مرة أخرى",
+  "backToHome": "العودة للرئيسية",
+  "noCardsToStudy": "لا توجد بطاقات للدراسة",
+  "studyExitConfirm": "لن يتم حفظ التقدم. هل تريد الخروج؟",
+  "exit": "خروج"
 }
