--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -31,5 +31,22 @@
   "discardChanges": "Discard Changes",
   "discardChangesMessage": "You have unsaved changes. Discard them?",
   "keepEditing": "Keep Editing",
-  "discard": "Discard"
+  "discard": "Discard",
+  "startStudy": "Start Study",
+  "studying": "Studying",
+  "enterAnswer": "Enter your answer",
+  "submit": "Submit",
+  "correct": "Correct!",
+  "incorrect": "Incorrect",
+  "yourAnswer": "Your answer",
+  "correctAnswerLabel": "Correct answer",
+  "next": "Next",
+  "studyComplete": "Study Complete",
+  "accuracy": "Accuracy",
+  "wrongAnswers": "Wrong Answers",
+  "studyAgain": "Study Again",
+  "backToHome": "Back to Home",
+  "noCardsToStudy": "No cards to study",
+  "studyExitConfirm": "Your progress will be lost. Exit study?",
+  "exit": "Exit"
 }
