--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -28,5 +28,22 @@
   "discardChanges": "변경 취소",
   "discardChangesMessage": "저장하지 않은 변경 사항이 있습니다. 취소할까요?",
   "keepEditing": "계속 편집",
-  "discard": "취소"
+  "discard": "취소",
+  "startStudy": "학습 시작",
+  "studying": "학습 중",
+  "enterAnswer": "답을 입력하세요",
+  "submit": "제출",
+  "correct": "정답!",
+  "incorrect": "오답",
+  "yourAnswer": "내 답",
+  "correctAnswerLabel": "정답",
+  "next": "다음",
+  "studyComplete": "학습 완료",
+  "accuracy": "정확도",
+  "wrongAnswers": "틀린 문제",
+  "studyAgain": "다시 학습",
+  "backToHome": "홈으로",
+  "noCardsToStudy": "학습할 카드가 없습니다",
+  "studyExitConfirm": "진행 상황이 저장되지 않습니다. 종료할까요?",
+  "exit": "종료"
 }
