Add emptyAnswer localization to study result page
  - Localize empty answer text in wrong answers list
  - Add emptyAnswer string for all 12 languages

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -45,5 +45,6 @@
   "backToHome": "العودة للرئيسية",
   "noCardsToStudy": "لا توجد بطاقات للدراسة",
   "studyExitConfirm": "لن يتم حفظ التقدم. هل تريد الخروج؟",
-  "exit": "خروج"
+  "exit": "خروج",
+  "emptyAnswer": "(فارغ)"
 }
