--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -48,5 +48,6 @@
   "backToHome": "Back to Home",
   "noCardsToStudy": "No cards to study",
   "studyExitConfirm": "Your progress will be lost. Exit study?",
-  "exit": "Exit"
+  "exit": "Exit",
+  "emptyAnswer": "(empty)"
 }
