--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -45,5 +45,6 @@
   "backToHome": "返回首页",
   "noCardsToStudy": "没有可学习的卡片",
   "studyExitConfirm": "进度将不会保存。确定退出？",
-  "exit": "退出"
+  "exit": "退出",
+  "emptyAnswer": "（空白）"
 }
