--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -45,5 +45,6 @@
   "backToHome": "홈으로",
   "noCardsToStudy": "학습할 카드가 없습니다",
   "studyExitConfirm": "진행 상황이 저장되지 않습니다. 종료할까요?",
-  "exit": "종료"
+  "exit": "종료",
+  "emptyAnswer": "(빈 답변)"
 }
