--- a/lib/l10n/app_zh_Hant.arb
+++ b/lib/l10n/app_zh_Hant.arb
@@ -46,5 +46,11 @@
   "noCardsToStudy": "沒有可學習的卡片",
   "studyExitConfirm": "進度將不會儲存。確定退出？",
   "exit": "退出",
-  "emptyAnswer": "（空白）"
+  "emptyAnswer": "（空白）",
+  "listening": "正在聽...",
+  "tapMicToSpeak": "點擊麥克風說話",
+  "typeInstead": "手動輸入",
+  "hideKeyboard": "隱藏鍵盤",
+  "speechNotAvailable": "語音識別不可用",
+  "similarityScore": "相似度"
 }
