Persist study results and display status on card list
  - Add lastSimilarity and lastPassed fields to MemoryCard model
  - Show pass/fail indicator strip and similarity % badge on CardItem
  - Save study results to database after each answer check
  - Simplify speech input by using controller directly
  - Add retry and tapMicOrType localization strings

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -52,5 +52,7 @@
   "typeInstead": "اكتب بدلاً من ذلك",
   "hideKeyboard": "إخفاء لوحة المفاتيح",
   "speechNotAvailable": "التعرف على الصوت غير متاح",
-  "similarityScore": "التشابه"
+  "similarityScore": "التشابه",
+  "retry": "إعادة المحاولة",
+  "tapMicOrType": "اضغط على الميكروفون للتحدث أو اكتب هنا"
 }
